syntax = "proto3";

import "proto/utils.proto";
import "proto/timeq.proto";

message MeterData {
    uint64 timestamp = 1;
    double value     = 2;
    bytes  hash      = 3;
}

message MeterQuery {
    TimeQuery low       = 1;
    TimeQuery hight     = 2;
    SensorId  sensor_id = 3;
}

message LimitQuery {
    oneof time_query{
        bool limit_null  = 1;
        uint64 limit     = 2;
    }
}

message TimeLimitedQuery{
    SensorId   sensor_id = 1;
    TimeQuery  start     = 2;
    LimitQuery limit     = 3;
}

service DataService{
    rpc GetSensorData(MeterQuery) returns (stream MeterData){};
    rpc GetLimitedData(TimeLimitedQuery) returns (stream MeterData){}
}

// python3 -m grpc_tools.protoc -Iprotobuf/data protobuf/data/stats.proto --python_out=./python/data/proto